--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "jspdf": "^3.0.4",
+    "svg2pdf.js": "^2.6.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
