--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "jspdf": "^3.0.4",
     "svg2pdf.js": "^2.6.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "vitest": "^4.0.15"
   },
   "devDependencies": {
     "@vite-pwa/assets-generator": "^1.0.2",
