--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@vite-pwa/assets-generator": "^1.0.2",
+    "happy-dom": "^20.0.11",
     "typescript": "~5.9.3",
     "vite": "^7.2.6",
     "vite-plugin-pwa": "^1.2.0",
